Add internal Api and his tests

--- a/tests/.env_4
+++ b/tests/.env_4
@@ -1,1 +1,4 @@
 DB_DSN='host=127.0.0.1 port=5430 user=postgres_user password=postgres_password dbname=idm_go sslmode=disable'
+
+APP_NAME=idm
+APP_VERSION=1.0.1
