--- a/tests/.env_5
+++ b/tests/.env_5
@@ -4,3 +4,6 @@ GOOSE_MIGRATION_DIR=./migrations
 
 DB_DRIVER_NAME=postgres
 DB_DSN='host=127.0.0.1 port=5430 user=postgres_user password=postgres_password dbname=idm_go sslmode=disable'
+
+APP_NAME=idm
+APP_VERSION=1.0.1
