--- a/tests/.env_6
+++ b/tests/.env_6
@@ -1,2 +1,5 @@
 DB_DRIVER_NAME=postgres
 DB_DSN='host=127.0.0.12 port=5830 user=postgres_user password=postgres_password dbname=idm_go sslmode=disable'
+
+APP_NAME=idm
+APP_VERSION=1.0.1
