--- a/inner/info/.env_info
+++ b/inner/info/.env_info
@@ -3,3 +3,6 @@ DB_DSN='host=127.0.0.1 port=5430 user=postgres_user password=postgres_password d
 
 APP_NAME=idm
 APP_VERSION=1.0.1
+
+LOG_LEVEL=DEBUG
+LOG_DEVELOP_MODE=true
